--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,25 @@ image: dock.mau.dev/maubot/maubot
 stages:
 - build
 
-artifacts:
-  paths:
-  - *.mbp
+variables:
+  PYTHONPATH: /opt/maubot
 
 build:
   stage: build
   except:
   - tags
   script:
-  - mbc build -o xyz.maubot.$CI_PROJECT_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA.mbp
+  - python3 -m maubot.cli build -o xyz.maubot.$CI_PROJECT_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA.mbp
+  artifacts:
+    paths:
+    - "*.mbp"
 
 build tags:
   stage: build
   only:
   - tags
   script:
-  mbc build -o xyz.maubot.$CI_PROJECT_NAME-$CI_COMMIT_TAG.mbp
+  - python3 -m maubot.cli build -o xyz.maubot.$CI_PROJECT_NAME-$CI_COMMIT_TAG.mbp
+  artifacts:
+    paths:
+    - "*.mbp"
